# baler

./: ARCHITECTURE.md  Cargo.toml  README.md
src/baler/: lib.rs
src/baler/core/: manifest.rs  package.rs  package_id_spec.rs  source.rs  workspace.rs
src/baler/ops/: baler_compile.rs  baler_fetch.rs  baler_install.rs  baler_new.rs  baler_package.rs  baler_pkgid.rs  baler_read_manifest.rs  baler_run.rs  lockfile.rs  mod.rs  registry.rs  resolve.rs
src/baler/sources/: config.rs  directory.rs  path.rs
src/baler/util/: config.rs  flock.rs  important_paths.rs  job.rs  network.rs  paths.rs
src/crates-io/: Cargo.toml  lib.rs
src/doc/: build-script.md  config.md  crates-io.md  environment-variables.md  external-tools.md  faq.md  guide.md  header.html  index.md  manifest.md  policies.md  source-replacement.md  specifying-dependencies.md
src/etc/: _baler  baler.bashcomp.sh
src/etc/man/: baler-bench.1  baler-build.1  (+24 more)
tests/: bad-config.rs  bad-manifest-path.rs  baler.rs  baler_alias_config.rs  bench.rs  build-auth.rs  build-lib.rs  build-script-env.rs  build-script.rs  build.rs  cfg.rs  check.rs  clean.rs  concurrent.rs  config.rs  cross-compile.rs  death.rs  dep-info.rs  directory.rs  doc.rs  features.rs  fetch.rs  freshness.rs  generate-lockfile.rs  git.rs  init.rs  install.rs  jobserver.rs  local-registry.rs  lockfile-compat.rs  login.rs  metadata.rs  net-config.rs  new.rs  overrides.rs  package.rs  path.rs  plugins.rs  proc-macro.rs  profiles.rs  (+17 more)
tests/balertest/: Cargo.toml  install.rs  lib.rs
tests/balertest/support/: git.rs  mod.rs  paths.rs  registry.rs
(+16 files in other folders)
